--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.13.1'
     implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'org.jetbrains:annotations:24.0.0'
     testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
 }
 
