--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,5 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
