--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 test {
@@ -17,5 +16,5 @@ test {
         events "passed", "skipped", "failed"
     }
 }
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
