--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 // Little change
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
