--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'junit:junit:4.13.1'
+    implementation 'org.json:json:20230227'
 }
 
 test {
