--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 # Generated files
 .idea/**/contentModel.xml
 
+test-aggregates/*
+test-entries/*
+
+.idea/*
+
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
